<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/a_focus_view_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FocusViewActivity">

    <ImageView
        android:id="@+id/a_focus_view_iv_picture"
        android:layout_width="146dp"
        android:layout_height="121dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/a_focus_view_iv_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a_focus_view_tv_name"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/a_focus_view_tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:text="@string/a_focus_view_tv_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/a_focus_view_tv_value_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/a_focus_view_tv_value_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a_focus_view_iv_picture" />

    <TextView
        android:id="@+id/a_focus_view_tv_value_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/a_focus_view_tv_value_number"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/a_focus_view_tv_value_label"
        app:layout_constraintTop_toBottomOf="@+id/a_focus_view_iv_picture" />

    <TextView
        android:id="@+id/a_focus_view_tv_statistics_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:text="@string/a_focus_view_tv_statistics"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a_focus_view_tv_value_label" />

    <TextView
        android:id="@+id/a_focus_view_tv_statistics_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/a_focus_view_tv_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a_focus_view_iv_logo" />

    <CheckBox
        android:id="@+id/a_focus_view_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/a_focus_view_iv_logo"
        android:layout_width="99dp"
        android:layout_height="90dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/a_focus_view_iv_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a_focus_view_tv_role"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/a_focus_view_tv_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="80dp"
        android:text="@string/a_focus_view_tv_role"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a_focus_view_cb" />
</androidx.constraintlayout.widget.ConstraintLayout>